# wikipedia-doomscroll

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  package.json  wikimedia_retrieval_tutorial.py
.forge/: project-pack.yaml
agents/: registry.json
backend/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/app/: db.py  enrich.py  enrichment.py  enrichment_repository.py  enrichment_routes.py  enrichment_watcher.py  logger.py  main.py  openai_client.py  post_generation.py  post_images.py  router.py  seed.py
backend/data/: app.db
backend/data/raw-articles/: category-members.json  category-subcategories.json  content-full-text.json  content-section.json  full-text-search.json  hydrated-search.json  most-viewed-day.json  most-viewed-month.json  on-this-day.json
backend/docs/: api-contract.md  architecture.md  crew-ownership.md  data-security.md  quality-gates.md  wikimedia-integration.md
backend/migrations/: 001_enrichment.sql  002_social.sql  003_post_article.sql  004_post_generation.sql
backend/tests/: test_enrichment.py  test_main.py
frontend/: AGENTS.md  components.json  landing.html  package-lock.json  tsconfig.node.json  vite.config.ts
tasks/: api-expert.json  code-review.json  data-expert.json  general.json  lean-review.json  platform-expert.json  project-architect.json  qa-tests.json  scrum-master.json  ui-specialist.json  update-docs.json
tools/: build_boards_viz.py
wikimedia_api/: main.py  test_media_generation.py
wikimedia_content/: all-categories.json  category-name-search.json  content-html.json  (+12 more)
(+48 files in other folders)
